tests/negative/typecheck/orelse.orng
fn main() -> Int
    let x: ?Char = .some <- '4'
    x orelse 4